Updated algorithm for AlphabetSorter class Added solution and test method for Palindrome code challenge

--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Easy Challenges\AlphabetSorter.cs" />
     <Compile Include="Easy Challenges\MathSequence.cs" />
+    <Compile Include="Easy Challenges\PalindromeChecker.cs" />
     <Compile Include="Easy Challenges\TimeConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
