--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Easy Challenges\TimeConverter.cs" />
     <Compile Include="Medium Challenges\ConsecutiveNumbers.cs" />
     <Compile Include="Medium Challenges\NumberEncoder.cs" />
+    <Compile Include="Medium Challenges\PrimeNumber.cs" />
     <Compile Include="Medium Challenges\StringUniqueSubstring.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
