Added class and test method for code challenge String Reduction.

--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Medium Challenges\PrimeNumber.cs" />
     <Compile Include="Medium Challenges\StringCompression.cs" />
     <Compile Include="Medium Challenges\StringMinimumWindow.cs" />
+    <Compile Include="Medium Challenges\StringReducer.cs" />
     <Compile Include="Medium Challenges\StringUniqueSubstring.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
