--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Medium Challenges\StringMinimumWindow.cs" />
     <Compile Include="Medium Challenges\StringReducer.cs" />
     <Compile Include="Medium Challenges\StringUniqueSubstring.cs" />
+    <Compile Include="Medium Challenges\TreeGraphs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestChallenge.cs" />
