--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="2 Medium Challenges\StringUniqueSubstring.cs" />
     <Compile Include="2 Medium Challenges\TreeGraphs.cs" />
     <Compile Include="3 Hard Challenges\Kaprekar.cs" />
+    <Compile Include="3 Hard Challenges\MatrixDeterminant.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestChallenge.cs" />
