Added class and test method for code challenge First Factorial.

--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="1 Easy Challenges\AlphabetSorter.cs" />
+    <Compile Include="1 Easy Challenges\Factorial.cs" />
     <Compile Include="1 Easy Challenges\MathSequence.cs" />
     <Compile Include="1 Easy Challenges\NumberCheck.cs" />
     <Compile Include="1 Easy Challenges\PalindromeChecker.cs" />
