--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -49,6 +49,7 @@
     <Compile Include="1 Easy Challenges\NumberCheck.cs" />
     <Compile Include="1 Easy Challenges\PalindromeChecker.cs" />
     <Compile Include="1 Easy Challenges\StringIntersection.cs" />
+    <Compile Include="1 Easy Challenges\StringReverse.cs" />
     <Compile Include="1 Easy Challenges\TimeConverter.cs" />
     <Compile Include="2 Medium Challenges\ConsecutiveNumbers.cs" />
     <Compile Include="2 Medium Challenges\NumberEncoder.cs" />
