--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -47,6 +47,7 @@
     <Compile Include="1 Easy Challenges\ChangeLetter.cs" />
     <Compile Include="1 Easy Challenges\ExponentTwo.cs" />
     <Compile Include="1 Easy Challenges\Factorial.cs" />
+    <Compile Include="1 Easy Challenges\MathProduct.cs" />
     <Compile Include="1 Easy Challenges\MathSequence.cs" />
     <Compile Include="1 Easy Challenges\NumberCheck.cs" />
     <Compile Include="1 Easy Challenges\PalindromeChecker.cs" />
