--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="1 Easy Challenges\MathSequence.cs" />
     <Compile Include="1 Easy Challenges\NumberCheck.cs" />
     <Compile Include="1 Easy Challenges\PalindromeChecker.cs" />
+    <Compile Include="1 Easy Challenges\SquareVowels.cs" />
     <Compile Include="1 Easy Challenges\StringIntersection.cs" />
     <Compile Include="1 Easy Challenges\StringReverse.cs" />
     <Compile Include="1 Easy Challenges\TimeConverter.cs" />
