--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -49,6 +49,7 @@
     <Compile Include="1 Easy Challenges\Factorial.cs" />
     <Compile Include="1 Easy Challenges\MathProduct.cs" />
     <Compile Include="1 Easy Challenges\MathSequence.cs" />
+    <Compile Include="1 Easy Challenges\MedianMovement.cs" />
     <Compile Include="1 Easy Challenges\NumberCheck.cs" />
     <Compile Include="1 Easy Challenges\PalindromeChecker.cs" />
     <Compile Include="1 Easy Challenges\SquareVowels.cs" />
