--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -54,6 +54,7 @@
     <Compile Include="1 Easy Challenges\PalindromeChecker.cs" />
     <Compile Include="1 Easy Challenges\QuestionMarkSum.cs" />
     <Compile Include="1 Easy Challenges\SquareVowels.cs" />
+    <Compile Include="1 Easy Challenges\StringBrackets.cs" />
     <Compile Include="1 Easy Challenges\StringIntersection.cs" />
     <Compile Include="1 Easy Challenges\StringReverse.cs" />
     <Compile Include="1 Easy Challenges\StringWords.cs" />
