--- a/Coderbyte_CSharp/Coderbyte_CSharp.csproj
+++ b/Coderbyte_CSharp/Coderbyte_CSharp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="1 Easy Challenges\StringBrackets.cs" />
     <Compile Include="1 Easy Challenges\StringIntersection.cs" />
     <Compile Include="1 Easy Challenges\StringReverse.cs" />
+    <Compile Include="1 Easy Challenges\StringSymbols.cs" />
     <Compile Include="1 Easy Challenges\StringWords.cs" />
     <Compile Include="1 Easy Challenges\TimeConverter.cs" />
     <Compile Include="2 Medium Challenges\ConsecutiveNumbers.cs" />
